--- a/_posts/2020-02-08-getFSLE.md
+++ b/_posts/2020-02-08-getFSLE.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Getting FSLE from Aviso for later extractin/animation
+title: Getting FSLE from Aviso for later extraction/animation
 date: '2020-02-08'
 tags:
   - FSLE
